# myrag

./: .env.example  .gitignore  README.md  langfuse-compose.yml
backend/: .env.example  =2.0.0  CHUNK_FIX.md  CONTENT_TSV_FIX.md  DOCX_FORMAT_DIAGNOSIS.md  Dockerfile  FINAL_SOLUTION.md  QUICK_START.md  SOLUTION.md  alembic.ini  pyproject.toml  requirements.txt  run_worker.bat  run_worker_continuous.bat  sql_add_node_type.sql  start_worker.bat  start_worker.py  start_worker_enhanced.py  start_worker_system.bat  test_langfuse.py  test_parse_chunk.py  test_parse_flow.py  test_upload.txt  verify_langfuse.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_users_roles.py  002_add_user_model_configs.py  003_add_role_kb_wf_bindings.py  004_add_kb_document_fields.py  005_add_chunk_metadata_fields.py  007_add_workflow_tables.py  008_add_workflow_execution_logs.py  009_add_workflow_templates.py  010_add_agent_tables.py  011_add_tools_table.py  012_add_mcp_connections_table.py  013_add_skill_enhancement.py  014_add_kb_config.py  015_link_kb_documents.py  016_add_fulltext_search.py  017_add_conversation_config.py  018_add_document_enums.py
backend/app/: config.py  dependencies.py  main.py
backend/app/agent/: __init__.py  agent_factory.py
backend/app/agents/: __init__.py  master_agent.py  (+4 more)
backend/tests/: conftest.py  test_associations.py  test_config.py  test_conversation_api_permission.py  test_conversation_permission.py  test_main.py  test_models.py  test_permission_helpers.py  test_role_binding_api.py  test_role_bindings.py  test_security.py  test_skill_generator.py  test_user_model_api.py  test_user_model_bindings.py  test_user_model_service.py
(+311 files in other folders)
