[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myrag-backend"
version = "0.1.0"
description = "MyRAG Backend - LangGraph + ARQ + MinerU"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "MyRAG Team"}
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.2.0",
    "redis>=5.0.0",
    "arq>=0.26.0",
    "minio>=7.1.0",
    # LangChain / LangGraph (v1.x)
    "langchain>=1.2.0",
    "langchain-core>=1.4.0",
    "langchain-anthropic>=1.4.0",
    "langchain-openai>=1.2.0",
    "langchain-deepseek>=0.1.0",
    "langchain-community>=0.4.0",
    "langgraph>=1.1.0",
    "langgraph-checkpoint>=4.1.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary,pool]>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",
    "email-validator>=2.0.0",
    "httpx>=0.27.0",
    "docker>=7.0.0",
    "structlog>=24.1.0",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.29",
    "langfuse>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
